<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrator.myapplication.b1_register_respond"
    tools:showIn="@layout/activity_b1_register_respond">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Your Profile has been sent to KWSTF !"
            style="@style/Title"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/Contentblack"
            android:text="The process will take 1~2 weeks, please wait."/>

        <RelativeLayout
            android:layout_width="250dp"
            android:background="#E1F5FE"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            android:layout_marginLeft="50dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_call_black_24dp"/>
        <TextView
            android:id="@+id/KWSTF_phone"
            android:layout_marginLeft="50dp"
            style="@style/Content"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/KWSTF_phone"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/KWSTF_address"
                android:src="@drawable/ic_location_on_black_24dp" />

        <TextView
            android:id="@+id/KWSTF_address"
            android:layout_marginTop="60dp"
            style="@style/Content"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/KWSTF_address"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email_black_24dp"/>
            <TextView
                android:id="@+id/KWSTF_emial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:layout_marginLeft="50dp"
                style="@style/Content"
                android:text="@string/KWSTF_email"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:text="check the status in" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Content"
            android:onClick="openmyprofle"
            android:layout_marginLeft="50dp"
            android:text="My Profile" />

        </LinearLayout>

    </LinearLayout>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="#0091EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu"
        app:itemTextColor="@color/colorMenu"
        />
</android.support.constraint.ConstraintLayout>
